SPCXCFZB-648 / fix IE word-wrap resource page

--- a/ckanext/spc/fanstatic/styles/spc.css
+++ b/ckanext/spc/fanstatic/styles/spc.css
@@ -4437,6 +4437,7 @@ button.header-menu-btn:focus {
 .nav-simple > li.nav-item {
   border-bottom: 1px dashed #bdbdbd;
   word-break: break-word;
+  word-wrap: break-word;
 }
 .nav-simple > li.nav-item a {
   font-size: 16px;
