--- a/ckanext/spc/theme/public/base/less/sidebar.less
+++ b/ckanext/spc/theme/public/base/less/sidebar.less
@@ -204,6 +204,7 @@
     > li.nav-item {
         border-bottom: 1px dashed #bdbdbd;
         word-break: break-word;
+        word-wrap: break-word;
         a {
             font-size: 16px;
             color: #000000;
